# vim:set softtabstop=3 shiftwidth=3 tabstop=3 expandtab:

add_subdirectory (slc)
add_subdirectory (sqlite)

# add_subdirectory (globalshortcuts)
# add_subdirectory (virtualdesktopswitch)
# macro_optional_add_subdirectory (activityranking)

# if (NepomukCore_FOUND AND Soprano_FOUND)
#     macro_optional_add_subdirectory (nepomuk)
# endif ()
